--- a/src/layouts/scss/_posts-table.scss
+++ b/src/layouts/scss/_posts-table.scss
@@ -4,10 +4,12 @@
   margin: 1rem auto;
   width: 786px;
   height: 211px;
+  height: 100%;
+  display: block;
+  overflow: auto;
 
   @include tablet {
     width: 686px;
-    height: 200px;
   }
 
   table {
@@ -24,5 +26,8 @@
 
   .posts-link {
     color: color-get(posts-title-link);
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
