--- a/src/layouts/scss/main.scss
+++ b/src/layouts/scss/main.scss
@@ -77,7 +77,6 @@ a {
 }
 
 .danger {
-  transform: translateX(10%);
   text-align: center;
   margin-top: 0.8rem;
   color: color-get(danger);
@@ -88,7 +87,7 @@ a {
   }
   @include mobile {
     font-size: 0.7rem;
-    transform: translateX(30%);
+    transform: translateX(10%);
   }
   @include mobile-sm {
     font-size: 0.6rem;
